feat[student]: add CreateStudent route
