# internal/server/routes/student_route.go
@@ -2,21 +2,16 @@ package routes
 
 import (
 	"github.com/gin-gonic/gin"
-	// "s-portal/internal/server/handlers"
+
+	"s-portal/internal/domain/service"
+	"s-portal/internal/server/handlers"
 )
 
-func StudentRoute(route *gin.RouterGroup) {
-	students := route.Group("/students")
+func StudentRoutes(route *gin.RouterGroup, service *service.StudentService) {
+	studentHandler := handlers.NewStudentHandler(service)
+
+	student := route.Group("/student")
 	{
-		students.GET("/hi", func(ctx *gin.Context) {
-			ctx.JSON(200, gin.H{
-				"message": "Yo students!",
-			})
-		
-		})
-		// route.GET("/:id", handlers.GetStudent)
-		// route.POST("/", handlers.CreateStudent)
-		// route.PUT("/:id", handlers.UpdateStudent)
-		// route.DELETE("/:id", handlers.DeleteStudent)
+		student.POST("/", studentHandler.CreateStudent)
 	}
 }
